--- a/setup-common.yml
+++ b/setup-common.yml
@@ -3,13 +3,14 @@ name: Common Setup
 on:
   workflow_call:
     inputs:
-      github-token:
-        required: true
-        type: string
       fetch-depth:
         required: false
         type: number
         default: 1
+    secrets:
+      GITHUB_TOKEN:
+        description: 'A token passed from the caller workflow'
+        required: true
 
 jobs:
   setup-common:
@@ -20,7 +21,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-        fetch-depth: ${{inputs.fetch-depth}}
+        fetch-depth: ${{ inputs.fetch-depth }}
         
     - name: Setup .NET 6
       uses: actions/setup-dotnet@master
@@ -38,4 +39,4 @@ jobs:
       with:
         source-url: https://nuget.pkg.github.com/BUTR/index.json
       env:
-        NUGET_AUTH_TOKEN: ${{inputs.github-token}}
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
