--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -56,6 +56,7 @@ jobs:
         if (!$${{ inputs.mod_version == '' }}) {
           echo "::set-output name=mod_version::${{ inputs.mod_version }}"
         }
+      shell: pwsh
 
     - name: Set Description
       if: ${{ inputs.mod_description == '' }}
@@ -71,6 +72,7 @@ jobs:
         if (!$${{ inputs.mod_description == '' }}) {
           echo "::set-output name=mod_description::${{ inputs.mod_description }}"
         }
+      shell: pwsh
 
     - name: Create Release
       uses: actions/create-release@v1
