--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -49,11 +49,11 @@ jobs:
       if: ${{ inputs.mod_version == '' }}
       id: set_version
       run: >-
-        if ${{ inputs.mod_version == '' }} then
+        if ${{ inputs.mod_version == '' }}
+        then
           vers="$(bannerlord_changelog_parser latestversion -f "$PWD/changelog.txt")";
           echo "::set-output name=mod_version::$vers";
-        fi
-        if ${{ inputs.mod_version != '' }} then
+        else
           echo "::set-output name=mod_version::${{ inputs.mod_version }}";
         fi
 
@@ -61,14 +61,14 @@ jobs:
       if: ${{ inputs.mod_description == '' }}
       id: set_description
       run: >-
-        if ${{ inputs.mod_description == '' }} then
+        if ${{ inputs.mod_description == '' }}
+        then
           desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")";
           desc="${desc//'%'/'%25'}";
           desc="${desc//$'\n'/'%0A'}";
           desc="${desc//$'\r'/'%0D'}";
           echo "::set-output name=mod_description::$desc";
-        fi
-        if ${{ inputs.mod_description != '' }} then
+        else
           echo "::set-output name=mod_description::${{ inputs.mod_description }}";
         fi
 
