--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -51,10 +51,10 @@ jobs:
       run: >-
         if ${{ inputs.mod_version == '' }}
         then
-          vers="$(bannerlord_changelog_parser latestversion -f "$PWD/changelog.txt")";
-          echo "::set-output name=mod_version::$vers";
+          vers="$(bannerlord_changelog_parser latestversion -f "$PWD/changelog.txt")"
+          echo "::set-output name=mod_version::$vers"
         else
-          echo "::set-output name=mod_version::${{ inputs.mod_version }}";
+          echo "::set-output name=mod_version::${{ inputs.mod_version }}"
         fi
 
     - name: Set Description
@@ -63,13 +63,13 @@ jobs:
       run: >-
         if ${{ inputs.mod_description == '' }}
         then
-          desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")";
-          desc="${desc//'%'/'%25'}";
-          desc="${desc//$'\n'/'%0A'}";
-          desc="${desc//$'\r'/'%0D'}";
-          echo "::set-output name=mod_description::$desc";
+          desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")"
+          desc="${desc//'%'/'%25'}"
+          desc="${desc//$'\n'/'%0A'}"
+          desc="${desc//$'\r'/'%0D'}"
+          echo "::set-output name=mod_description::$desc"
         else
-          echo "::set-output name=mod_description::${{ inputs.mod_description }}";
+          echo "::set-output name=mod_description::${{ inputs.mod_description }}"
         fi
 
     - name: Create Release
