--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -43,12 +43,17 @@ jobs:
 
     - run: cd ./steam-totp && npm ci && node .\src\index.js {{ secrets.STEAM_AUTH_CODE }}
 
-    - uses: AnarkisGaming/workshop@v1
-      with:
-        appID: 261550
-        publishedFileID: 2859188632
-        path: ./artifact
-        changelog: ${{ steps.version.outputs.mod_description }}
-      env:
-        STEAM_ACCOUNT_NAME: ${{ secrets.STEAM_LOGIN }}
-        STEAM_PASSWORD: ${{ secrets.STEAM_PASSWORD }}
+    - uses: CyberAndrii/setup-steamcmd@v1
+
+    - run: |
+        cat << EOT > item.vdf
+        "workshopitem"
+        {
+            "appid" "261550"
+            "publishedfileid" "2859188632"
+            "contentfolder" "./artifact"
+            "changenote" "${{ steps.version.outputs.mod_description }}"
+        }
+        EOT
+
+    - run: steamcmd +login ${{ secrets.STEAM_LOGIN }} ${{ secrets.STEAM_PASSWORD }} +workshop_build_item "./item.vdf" +quit
