--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -31,10 +31,27 @@ jobs:
     - uses: actions/setup-node@v3.4.1
       with:
         node-version: 16
-        #cache: 'npm'
-        #cache-dependency-path: steam-totp/package-lock.json
 
-    - run: cd ./steam-totp && npm ci && node .\src\index.js {{ secrets.STEAM_AUTH_CODE }}
+    - run: |
+        mkdir steam-totp
+        cat << EOT > steam-totp/package.json
+        {
+          "name": "steam-totp-gen",
+          "version": "1.0.0",
+          "description": "",
+          "main": "index.js",
+          "dependencies": {
+            "steam-totp": "^2.1.2"
+          }
+        }
+        
+    - run: |
+        cat << EOT > steam-totp/index.js
+        var code = require('steam-totp').generateAuthCode(process.argv[0]);
+        console.log(`::add-mask::${code}`);
+        console.log(`::set-output name=totp::${code}`);
+
+    - run: cd ./steam-totp && npm ci && node ./src/index.js {{ secrets.STEAM_AUTH_CODE }}
 
     - uses: CyberAndrii/setup-steamcmd@v1
 
