--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -86,7 +86,10 @@ jobs:
       with:
         node-version: 16
 
-    - run: cd ./steam-totp && npm ci && node ./src/index.js {{ secrets.STEAM_AUTH_CODE }}
+    - run: cd ./steam-totp && npm ci
+    - name: Set TOTP
+      id: steam
+      run: cd ./steam-totp && npm ci && node ./src/index.js {{ secrets.STEAM_AUTH_CODE }}
 
     - uses: CyberAndrii/setup-steamcmd@v1
 
@@ -101,4 +104,4 @@ jobs:
         }
         EOT
 
-    - run: steamcmd +login ${{ secrets.STEAM_LOGIN }} ${{ secrets.STEAM_PASSWORD }} +workshop_build_item "./item.vdf" +quit
+    - run: steamcmd +login ${{ secrets.STEAM_LOGIN }} ${{ secrets.STEAM_PASSWORD }} ${{ steps.steam.totp }} +workshop_build_item "./item.vdf" +quit
