--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -91,7 +91,7 @@ jobs:
     - name: Set TOTP
       id: steam
       run: |
-        $code = "$(node ./steam-totp/src/index.js {{ secrets.STEAM_AUTH_CODE }})"
+        code="$(node ./steam-totp/src/index.js {{ secrets.STEAM_AUTH_CODE }})"
         echo "::add-mask::$code"
         echo "::set-output name=totp::$code"
 
