--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -35,6 +35,21 @@ jobs:
         name: ${{ inputs.artifact_name }}
         path: ./artifact
 
+    - name: Set Description
+      if: ${{ inputs.mod_description == '' }}
+      id: set_description
+      run: |
+        if ${{ inputs.mod_description == '' }}
+        then
+          desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")"
+          desc="${desc//'%'/'%25'}"
+          desc="${desc//$'\n'/'%0A'}"
+          desc="${desc//$'\r'/'%0D'}"
+          echo "::set-output name=mod_description::$desc"
+        else
+          echo "::set-output name=mod_description::${{ inputs.mod_description }}"
+        fi
+
     - run: |
         mkdir steam-totp
         mkdir steam-totp/src
