--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -6,7 +6,7 @@ on:
       workshop_id:
         required: true
         type: number
-        default: ''
+        default: -1
       mod_description:
         required: false
         type: string
