--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -51,7 +51,7 @@ jobs:
         path: ./artifact
 
     - name: 7z Module
-      run: 7z a -t7z ${{ inputs.mod_filename }}.7z ./artifact/* -mx9
+      run: 7z a -t7z "${{ inputs.mod_filename }}.7z" ./artifact/* -mx9
       #shell: pwsh
       # pwsh casues it to include the root folder
 
