--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -44,6 +44,11 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     
+    - name: Setup .NET 3.1
+      uses: actions/setup-dotnet@master
+      with:
+        dotnet-version: 3.1.x
+    
     - name: Download Module artifact
       uses: actions/download-artifact@v3
       with:
