--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -83,6 +83,7 @@ jobs:
         then
           desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")"
           desc="${desc//'%'/'%25'}"
+          desc="${desc//$'"'/'%22'}"
           desc="${desc//$'\n'/'%0A'}"
           desc="${desc//$'\r'/'%0D'}"
           echo "::set-output name=mod_description::$desc"
@@ -92,6 +93,7 @@ jobs:
         else
           desc="${{ inputs.mod_description }}"
           desc="${desc//'%'/'%25'}"
+          desc="${desc//$'"'/'%22'}"
           desc="${desc//$'\n'/'%0A'}"
           desc="${desc//$'\r'/'%0D'}"
           echo "::set-output name=mod_description::$desc"
