--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -57,12 +57,14 @@ jobs:
         then
           desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")"
           desc="${desc//'%'/'%25'}"
+          desc="${desc//$'"'/'%22'}"
           desc="${desc//$'\n'/'%0A'}"
           desc="${desc//$'\r'/'%0D'}"
           echo "::set-output name=mod_description::$desc"
         else
           desc="${{ inputs.mod_description }}"
           desc="${desc//'%'/'%25'}"
+          desc="${desc//$'"'/'%22'}"
           desc="${desc//$'\n'/'%0A'}"
           desc="${desc//$'\r'/'%0D'}"
           echo "::set-output name=mod_description::$desc"
