--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -43,6 +43,8 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: ${{ inputs.artifact_name }}
+        pattern: ${{ inputs.artifact_name }}-*
+        merge-multiple: true
         path: ./artifact
 
     - name: Install Bannerlord.ChangelogParser
