--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -48,6 +48,11 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: ${{ inputs.artifact_name }}
+        path: ./artifact
+
+    - name: Download Module artifact
+      uses: actions/download-artifact@v4
+      with:
         pattern: ${{ inputs.artifact_name }}-*
         merge-multiple: true
         path: ./artifact
