--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -49,6 +49,7 @@ jobs:
       with:
         name: ${{ inputs.artifact_name }}
         path: ./artifact
+      continue-on-error: true
 
     - name: Download Module artifact
       uses: actions/download-artifact@v4
@@ -56,6 +57,7 @@ jobs:
         pattern: ${{ inputs.artifact_name }}-*
         merge-multiple: true
         path: ./artifact
+      continue-on-error: true
 
     - name: 7z Module
       run: 7z a -t7z "${{ inputs.mod_filename }}.7z" ./artifact/* -mx9
