--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -36,9 +36,16 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: ${{ inputs.artifact_name }}
+        path: ./artifact
+      continue-on-error: true
+
+    - name: Download Module artifact Pattern
+      uses: actions/download-artifact@v4
+      with:
         pattern: ${{ inputs.artifact_name }}-*
         merge-multiple: true
         path: ./artifact
+      continue-on-error: true
 
     - name: 7z Module
       run: 7z a -t7z ${{ inputs.mod_id }}.7z ./artifact/* -mx9
