--- a/.github/workflows/release-nexusmods.yml
+++ b/.github/workflows/release-nexusmods.yml
@@ -51,7 +51,7 @@ jobs:
         path: ./artifact
       continue-on-error: true
 
-    - name: Download Module artifact
+    - name: Download Module artifact Pattern
       uses: actions/download-artifact@v4
       with:
         pattern: ${{ inputs.artifact_name }}-*
