--- a/.github/workflows/release-steam.yml
+++ b/.github/workflows/release-steam.yml
@@ -43,9 +43,16 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: ${{ inputs.artifact_name }}
+        path: ./artifact
+      continue-on-error: true
+
+    - name: Download Module artifact Pattern
+      uses: actions/download-artifact@v4
+      with:
         pattern: ${{ inputs.artifact_name }}-*
         merge-multiple: true
         path: ./artifact
+      continue-on-error: true
 
     - name: Install Bannerlord.ChangelogParser
       if: ${{ inputs.mod_description == '' }}
