--- a/.github/workflows/verify-unex-nexusmods.yml
+++ b/.github/workflows/verify-unex-nexusmods.yml
@@ -5,7 +5,7 @@ on:
     secrets:
       NEXUSMODS_API_KEY:
         required: true
-      NEXUSMODS_COOKIES:
+      NEXUSMODS_SESSION_COOKIE:
         required: true
 
 jobs:
@@ -27,5 +27,5 @@ jobs:
       run: unex check
       env:
         UNEX_APIKEY: ${{ secrets.NEXUSMODS_API_KEY }}
-        UNEX_COOKIES: ${{ secrets.NEXUSMODS_COOKIES }}
+        UNEX_SESSION_COOKIE: ${{ secrets.NEXUSMODS_SESSION_COOKIE }}
       shell: pwsh
