--- a/.github/workflows/refresh-unex-nexusmods.yml
+++ b/.github/workflows/refresh-unex-nexusmods.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet tool install -g BUTR.NexusUploader
       shell: pwsh
 
-    - name: Check NexusUploader credentials
+    - name: Refresh NexusUploader credentials
       run: unex refresh
       env:
         UNEX_SESSION_COOKIE: ${{ secrets.NEXUSMODS_SESSION_COOKIE }}
